Double transforms on parents/children #55408

Closed
opened 2018-06-08 15:54:18 +02:00 by Julien Kaspar · 8 comments
Member

Blender Version
Broken: 2.8 97e7d9f90b

Short description of error
In 2.7 when you select a parent object and every children objects under it and you start to move,rotate or scale them, you basically only apply these transforms to the top parent so that double transformations are prevented.
In 2.8 this is no longer the case and if you want to duplicate a parent with all its children and move them you have to first select only the new parent which could make the user search the Alt + RMB menu or Outliner first, which makes it more tedious.

**Blender Version** Broken: 2.8 97e7d9f90b3 **Short description of error** In 2.7 when you select a parent object and every children objects under it and you start to move,rotate or scale them, you basically only apply these transforms to the top parent so that double transformations are prevented. In 2.8 this is no longer the case and if you want to duplicate a parent with all its children and move them you have to first select only the new parent which could make the user search the Alt + RMB menu or Outliner first, which makes it more tedious.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Another related problem would be that when a parent and it's children are selected and you apply the transforms, the parenting relation is also ignored.
If the parent is scaled to 0.5 in all axes and the child is still at a scale of 1, and all get their scale applied, the parent gets set back to 1 and the child will grow to twice the size with a scale of 1.

Another related problem would be that when a parent and it's children are selected and you apply the transforms, the parenting relation is also ignored. If the parent is scaled to 0.5 in all axes and the child is still at a scale of 1, and all get their scale applied, the parent gets set back to 1 and the child will grow to twice the size with a scale of 1.

Added subscribers: @dfelinto, @ideasman42, @mont29

Added subscribers: @dfelinto, @ideasman42, @mont29

Arg... This is a hairy mess :/

We have a system to detect those cases and prevent transform of childrens, but it has been broken in blender2.8 changes, and it seems more than one time...
The base.flag vs. base.flag_legacy may have broken syncing between base and object. However, tried reverting back to a single base.flag and it does not fix the issue. So maybe something else is also at stake here, like ;ulti-editing changes...

@dfelinto @ideasman42 adding both of you here, in case you have some brilliant idea, but still investigating (next step: try to bisect to find which commit broke that!).

Arg... This is a hairy mess :/ We have a system to detect those cases and prevent transform of childrens, but it has been broken in blender2.8 changes, and it seems more than one time... The `base.flag` vs. `base.flag_legacy` *may* have broken syncing between base and object. However, tried reverting back to a single `base.flag` and it does not fix the issue. So maybe something else is also at stake here, like ;ulti-editing changes... @dfelinto @ideasman42 adding both of you here, in case you have some brilliant idea, but still investigating (next step: try to bisect to find which commit broke that!).

OK, so this is actually COW-related issue, present since even before March when starting blender with it enabled....

Will check further tomorrow.

OK, so this is actually COW-related issue, present since even before March when starting blender with it enabled.... Will check further tomorrow.

This issue was referenced by 995a1815f5

This issue was referenced by 995a1815f5fd396846f570da761c07e5a09532f2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

PS: please make one report per issue, the apply transform is something else ;)

PS: please make one report per issue, the apply transform is something else ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55408
No description provided.